implement reservation
